src/test/ui/existential_types/generic_duplicate_param_use3.stderr
error: defining existential type use differs from previous
  --> $DIR/generic_duplicate_param_use3.rs:16:1
   |
LL | / fn three<T: 'static, U: 'static>(_: T, u: U) -> Two<T, U> {
LL | |     //~^ ERROR defining existential type use differs from previous
LL | |     u
LL | | }
   | |_^
   |
note: previous use here
  --> $DIR/generic_duplicate_param_use3.rs:8:1
   |
LL | / fn one<T: 'static>(t: T) -> Two<T, T> {
LL | |     t
LL | | }
   | |_^

error: aborting due to previous error

